--- a/.github/workflows/run-linuxdo.yml
+++ b/.github/workflows/run-linuxdo.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 0 * * *'  # 每天 UTC 时间午夜运行一次
+    - cron: '*/30 * * * *'  # 每天 UTC 时间午夜运行一次
 
 jobs:
   run-linuxdo:
